--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
-<link rel="stylesheet" href="zhong.css">
+<link rel="stylesheet" href="zuoye.css">
 </head>
 
 <body>
@@ -49,15 +49,19 @@
   </div>
   <div class="box4">
   <h2>易于学习</h2>
-  <p>通过最少的API,掌握 Gulp 毫不费力,构建工作尽在掌握：如同一系列流管道。</p>
+  <p>通过最少的API,掌握Gulp毫不费力,构建工作尽在掌握：如同一系列流管道。</p>
   </div>
 </div>
-
 <!--底部区域-->
-<div class="footer">
-   <div class="text">© Gulp 中文网 2019
+<div class="footer" >
+   <div class="text" >
+   <font size="-1">
+<p>© Gulp 中文网 2019</p>
+<p> Bootstrap中文网 Nodejs中文文档 Jekyll中文网 Webpack中文文档 全栈课堂 91PHP NPM中文文档 jQuery中文网 Grunt中文网 SASS中国 Rollup中文网 Tailwind CSS</p> 
+<p>优站精选</p> 
 
-    Bootstrap中文网 Nodejs中文文档 Jekyll中文网 Webpack中文文档
+京ICP备11008151号 | 京公网安备11010802014853
+    </font> 
     </div>
 </div>
 </body>
